golang-chat/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  labels:
    app: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: chat
          image: git.oteacher.org:5001/oteacher/devops/image-hub/chat/chat:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: registry-credential
