golang-chat/templates/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: chat-service
  labels:
    app: chat
spec:
  type: LoadBalancer
  selector:
    app: chat
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  labels:
    app: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: chat
          image: git.oteacher.org:5001/oteacher/devops/image-hub/chat/chat:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: registry-credential
