golang-chat/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: oteacher.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 8080
